adjust styling, confirm bug is fixed

--- a/src/style.css
+++ b/src/style.css
@@ -28,7 +28,14 @@ body {
   border: black 1px solid;
   border-radius: var(--borderRadius);
   background-color: var(--secondary);
+  overflow: scroll;
 }
+
+/* not responding? under or over specified?
+#mainContainer > * > h4 {
+  position: sticky;
+}
+*/
 
 #mainContainer > * > * {
   margin: var(--internalMargin);
