--- a/src/style.css
+++ b/src/style.css
@@ -45,6 +45,7 @@ body {
   width: auto;
   min-height: 2.1cm; 
   height: var(--pairHeight);
+  padding: var(--margin) var(--internalMargin);
 }
 
 #bookCreator {
